name:          wplc
version:       0.1
cabal-version: >= 1.10
copyright:     (c) 2013 Microsoft
author:        Gordon Stewart <jsseven@cs.princeton.edu>
               Dimitrios Vytiniotis <dimitris@microsoft.com>
               Bozidar Radunovic <bozidar@microsoft.com>
               Geoffrey Mainland <mainland@cs.drexel.edu>
               Mahanth Gowda <gowda2@illinois.edu>
stability:     alpha
category:      Language
synopsis:      Compiler for the WPL language.
tested-with:   GHC==7.8.4, GHC==7.10.3, GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.5, GHC==8.8.1

description:
  This package provides a compiler for the WPL language.

build-type: Simple

Executable wplc
  hs-source-dirs:   src src/BasicTypes src/Codegen src/Optimize
                    src/Pipeline src/Typecheck src/Utils src/Vectorize
                    src/Analysis src/ComputeType
  main-is:          Main.hs
  -- TODO: We should use a proper module hierarchy and only have 'src' 
  -- as the include dir.
  default-language: Haskell98
  other-modules:
    AbsInt
    Analysis.DataFlow
    Analysis.RangeAnal
    AstComp
    AstExpr
    AstExprTypes
    AstFM
    AstLabelled
    AstName
    AstUnlabelled
    AutoLUT
    CardAnalysis
    CgBoundsCheck
    CgCall
    CgCmdDom
    CgExpr
    CgFun
    CgHeader
    CgLUT
    CgMonad
    CgOpt
    CgPrint
    CgProgram
    CgRuntime
    CgSetupThreads
    CgTypes
    CgValDom
    CtCall
    CtComp
    CtExpr
    GenSym
    Interpreter
    LUTAnalysis
    LUTBasicTypes
    Language.Ziria.Parser
    Language.Ziria.Parser.Alex
    Language.Ziria.Parser.CamlParser
    Language.Ziria.Parser.Exceptions
    Language.Ziria.Parser.Lexer
    Language.Ziria.Parser.Monad
    Language.Ziria.Parser.Parser
    Language.Ziria.Parser.Tokens
    Lens
    NameEnv
    Opts
    Orphans
    Outputable
    PassComp
    PassExpr
    PassFold
    PassFoldDebug
    PassFoldM
    PassOptMit
    PassPipeline
    PpComp
    PpExpr
    Rebindables
    Rename
    SparseArray
    Tc
    TcMonad
    TcRename
    TcUnify
    Typecheck
    Utils
    VecM
    VecRewriter
    VecSF
    VecScaleDn
    VecScaleUp
    Vectorize

  default-extensions: DoAndIfThenElse PatternGuards
  other-extensions: TemplateHaskell, QuasiQuotes

  build-depends:
    array                  >= 0.2   && < 0.6,
    base                   >= 4     && < 5,
    bytestring             >= 0.10  && < 0.11,
    containers             >= 0.4   && < 0.7,
    deepseq                >= 1.3   && < 1.5,
    -- deepseq-generics is needed for deepseq < 1.4
    deepseq-generics       >= 0.1   && < 0.3,
    directory              >= 1.2   && < 1.4,
    exception-transformers >= 0.3   && < 0.6,
    ghc-prim               >= 0.3   && < 0.6,
    hashable               >= 1.2   && < 1.3,
    language-c-quote       >= 0.12  && < 0.13,
    mainland-pretty        >= 0.6   && < 0.8,
    mtl                    >= 2.0   && < 3,
    -- parsec 3.1.6 contains a bug (https://github.com/aslatter/parsec/issues/9)
    parsec                 >= 3.1.7 && < 3.2,
    pretty                 >= 1.1   && < 1.2,
    pretty-show            >= 1.6.9 && < 1.10,
    srcloc                 >= 0.5.0.2 && < 0.6,
    syb                    >= 0.4   && < 0.8,
    symbol                 >= 0.1   && < 0.3,
    text                   >= 1.1   && < 1.3,
    time                   >= 1.4   && < 1.9,
    template-haskell       >= 2.9   && < 2.15,
    transformers           >= 0.3   && < 0.6

  -- Process 1.1 doesn't build with GHC 7.8
  if impl(ghc >= 7.8)
    build-depends:
      process              >= 1.2 && < 1.7
  else
    build-depends:
      process              >= 1.1 && < 1.2

  if impl(ghc >= 8.0)
    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances
  else
    -- provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
    build-depends: fail == 4.9.*, semigroups == 0.18.*

  ghc-options: -fwarn-incomplete-patterns -Werror 
               -- For profiling
               -threaded -fprof-auto 
               -rtsopts
               -- "-with-rtsopts=-N -p -s -hy -i0.1"

  build-tools: alex, happy

Executable BlinkDiff
  hs-source-dirs:   tools
  main-is:          BlinkDiff.hs

  default-language: Haskell98

  default-extensions: DoAndIfThenElse PatternGuards

  build-depends:
    base                   >= 4     && < 5,
    containers             >= 0.4   && < 0.7,
    parsec                 >= 3.1.7 && < 3.2

  ghc-options: -fwarn-incomplete-patterns -Werror
